# btc-zero-prd-claude-code

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/ui/: ui-prototyper.md
.claude/agents/workflow/: brainstorm-agent.md  build-agent.md  define-agent.md  design-agent.md
.claude/commands/workflow/: peer-review.md
.claude/kb/: _index.yaml
.claude/kb/frameworks/: index.md  quick-reference.md
.claude/kb/frameworks/_templates/: TEMPLATE_analysis.md  TEMPLATE_jarvis-integration.md  TEMPLATE_learning-guide.md
.claude/kb/frameworks/agentspec/: analysis.md  jarvis-integration.md  learning-guide.md
.claude/kb/frameworks/awesome-claude-code-curated/: RECOMMENDATIONS.md  adoption-guide.md  index.md  top-picks.md
.claude/kb/frameworks/beads/: analysis.md  jarvis-integration.md  learning-guide.md
.claude/kb/frameworks/cipher/: analysis.md  jarvis-integration.md  learning-guide.md
.claude/kb/jarvis-base/: index.md  quick-reference.md
.claude/kb/lovable/: 01-prompting-guide.md  02-github-workflow.md  03-tool-division.md  04-limitations.md  README.md
.claude/kb/sdd/: index.md  quick-reference.md
.claude/sdd/features/: BRAINSTORM_MEDFLOW_MVP.md  DEFINE_GCS_UPLOAD.md  DEFINE_LANGFUSE_OBSERVABILITY.md  DEFINE_MEDFLOW_MVP.md  DEFINE_SMOKE_TEST.md  DEFINE_TERRAFORM_TERRAGRUNT_INFRA.md  DESIGN_GCS_UPLOAD.md  DESIGN_LANGFUSE_OBSERVABILITY.md  DESIGN_MEDFLOW_MVP.md  DESIGN_SMOKE_TEST.md  DESIGN_TERRAFORM_TERRAGRUNT_INFRA.md
.claude/sdd/reports/: BUILD_REPORT_MEDFLOW_MVP.md
.claude/skills/agent-quality/: SKILL.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/context7-research/: SKILL.md
.claude/skills/engineering-quality/: README.md  SKILL.md  checklist.yaml
.claude/skills/genai/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/lovable/: SKILL.md
.claude/skills/pm/: SKILL.md
.claude/skills/skill-manager/: SKILL.md
.claude/skills/supabase-migrations/: SKILL.md
.claude/skills/ui-forge/: SKILL.md
.github/scripts/: setup-workload-identity.sh
.github/workflows/: cd-dev.yaml  cd-prod.yaml  ci.yaml  claude-review.yaml  terraform.yaml
design/: gcp-cloud-run-fncs.md  gcp-deployment-requirements.md  infra-terraform-terragrunt-design.md  invoice-extractor-design.md  invoice-extractor-requirements.md
docs/: COMPLETE_GUIDE_SDD_AGENTSPEC.md  Entendimento Estrutura Claude.txt  btc-zero-learning-guide.md  btc-zero-quick-reference.md
functions/gcp/v1/: .gitignore  cloudbuild-data-extractor.yaml  cloudbuild-dlq-processor.yaml  cloudbuild-prod.yaml  cloudbuild.yaml
infra/: .gitignore  terragrunt.hcl
infra/environments/prod/: env.hcl
infra/modules/bigquery/: main.tf  outputs.tf  variables.tf
infra/modules/cloud-run/: iam.tf  main.tf  outputs.tf  variables.tf
infra/modules/gcs/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/pubsub/: dlq.tf  main.tf  outputs.tf  variables.tf
infra/modules/secrets/: main.tf  outputs.tf  variables.tf
infra/scripts/: setup-pubsub-triggers-prod.sh
src/invoice_extractor/: __init__.py  cli.py  extractor.py  image_processor.py  llm_gateway.py  models.py  readme.md  validator.py
src/invoice_extractor/prompts/: doordash.txt  generic.txt  grubhub.txt  ifood.txt  ubereats.txt
src/invoice_extractor/tests/: __init__.py  conftest.py
tests/: __init__.py
tests/smoke/: __init__.py  cli.py  config.py  models.py  pyproject.toml  runner.py
tests/smoke/config/: smoke_config.yaml
tests/smoke/fixtures/: .gitkeep
tests/smoke/stages/: __init__.py  base.py  bigquery.py  generate.py  logging.py  process.py  upload.py  validate.py
tests/smoke/validators/: __init__.py  field_matcher.py
ui/: README.md  __init__.py  app.py  config.py  models.py  parser.py  pyproject.toml  requirements.txt  state.py
ui/.streamlit/: config.toml
ui/components/: __init__.py  export.py  file_browser.py  markdown_viewer.py  status_badges.py  theme.py
ui/pages/: 1_Tasks.py  2_Progress.py  3_Logs.py  4_Create.py
ui/tests/: __init__.py  test_parser.py  test_progress_parser.py
ui/tests/fixtures/: empty_log.md  empty_tasks_prompt.md  malformed_frontmatter.md  minimal_prompt.md  missing_sections_prompt.md  unicode_prompt.md  valid_progress.md  valid_prompt.md
(+126 files in other folders)
