[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoice-processing-pipeline"
version = "1.0.0"
description = "AI-powered serverless invoice extraction using Gemini 2.5 Flash on GCP"
readme = "README_INVOICE_EXTRACTOR.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Data Engineering Team", email = "team@example.com"}
]
keywords = ["invoice", "extraction", "gemini", "llm", "pydantic", "gcp", "cloud-run"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-aiplatform>=1.38.0",
    "functions-framework>=3.0.0",
    "cloudevents>=1.10.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shared", "src/functions"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["shared", "functions", "tests"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/shared", "src/functions"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
