[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devloop-ui"
version = "0.1.0"
description = "Streamlit-based local UI for managing Dev Loop artifacts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dev Team" }
]
keywords = ["streamlit", "devloop", "ui", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Streamlit",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.32.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["ui"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["ui"]
